# OCaml-HW-4

./: dune-project
.github/workflows/: test.yml
gcd/: dune  gcd.s  gcd.t
lib/: dune  optimizer.ml  optimizer.mli  parser.ml  parser.mli
test/: dune  optimizer.ml  parser.ml  rv64_runtime.s  test.t
